--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     
       const ID1 = '2twhynojr3';
       const AREA = 'ap-northeast-1';
-    //   const URL = `https://${ID1}.execute-api.${AREA}.amazonaws.com/dev/`;
-      const URL = `https://${ID1}.execute-api.${AREA}.amazonaws.com/dev`;
+      const URL = `https://${ID1}.execute-api.${AREA}.amazonaws.com/dev/`;
+    //   const URL = `https://${ID1}.execute-api.${AREA}.amazonaws.com/dev`;
       const KEY = 'OjwoF3m0l20OFidHsRea3ptuQRfQL10ahbEtLa';
 
       const method = "POST";
